# curso_django

./: Dockerfile  compose.yml  pyproject.toml
curso/: .coveragerc  pytest.ini
curso/authors/: apps.py  forms.py  signals.py  urls.py  views.py
curso/authors/forms/: login_form.py  recipe_form.py  register_form.py
curso/authors/migrations/: 0001_initial.py
curso/authors/tests/: test_author_logout.py  test_author_register_form.py
curso/authors/views/: __init__.py  all.py  dashboard_recipe.py  dashboard_user.py  profile.py
curso/base_static/global/css/: style.css
curso/base_static/global/js/: scripts.js
curso/base_templates/global/: base.html
curso/base_templates/global/partials/: footer.html  form.html  head.html  header.html  menu.html  pagination.html  search.html
curso/locale/pt_BR/LC_MESSAGES/: django.po
curso/project/: asgi.py  settings.py  urls.py  wsgi.py
curso/recipes/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
curso/recipes/migrations/: 0001_initial.py  0002_alter_recipe_category_alter_recipe_cover_and_more.py  0003_recipe_tags.py  0004_alter_recipe_tags_alter_recipe_title.py
curso/recipes/tests/: test_category_models .py  test_recipe_base.py  test_recipe_category_view.py  test_recipe_detail_view.py  test_recipe_home_view.py  test_recipe_models.py  test_recipe_search_views.py  test_recipe_urls.py  test_recipe_views.py
curso/recipes/views/: __init__.py  all.py  recipe_view.py
curso/tag/: admin.py  models.py
curso/tag/migrations/: 0001_initial.py  0002_remove_tag_content_type_remove_tag_object_id.py
curso/utils/: browser.py  django_forms.py  pagination.py  test_pagination.py
(+26 files in other folders)
