[tool.poetry]
name = "curso"
version = "0.1.0"
description = ""
authors = ["Romario lima <romariolima1006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
faker = "^36.1.0"
pillow = "^11.1.0"
pytest-django = "^4.10.0"
pytest-watch = "^4.2.0"
parameterized = "^0.9.0"
coverage = "^7.6.12"
pytest = "^8.3.5"
python-dotenv = "^1.0.1"
selenium = "^4.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
